--- a/WebContent/css/todo.css
+++ b/WebContent/css/todo.css
@@ -3,11 +3,20 @@ body {
     background-color: #f4f4f4;
 }
 
+h1 {
+    color: #33186B;
+}
+
+.add-task {
+    margin-bottom: 10px;
+}
+
 #tasks {
     margin: 50px auto;
     padding: 20px;
+    border-radius: 25px;
     background-color: #fff;
-    width: 50%;
+    width: 70%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -18,6 +27,19 @@ ul {
 
 li {
     margin-bottom: 10px;
+}
+
+.task-item {
+    background-color: #F5EEE6;
+    color: #33186B;
+    font-size: medium;
+    border-radius: 15px;
+    width: 70%;
+    padding: 10px;
+}
+
+.completion-tick {
+    margin: 0 15px;
 }
 
 input[type="text"] {
