--- a/WebContent/css/todo.css
+++ b/WebContent/css/todo.css
@@ -11,6 +11,20 @@ h1 {
     margin-bottom: 10px;
 }
 
+img {
+    width: 40px;
+    height: 40px;
+}
+
+.add-task-button {
+    border: none;
+    transition: transform 0.7s ease-in-out;
+}
+
+.add-task-button:hover {
+    transform: rotate(360deg);
+}
+
 #tasks {
     margin: 50px auto;
     padding: 20px;
