--- a/WebContent/css/todo.css
+++ b/WebContent/css/todo.css
@@ -20,8 +20,17 @@ img {
 
 .add-task-button {
     transition: transform 0.7s ease-in-out;
-    border: none ;
+    border: none;
     padding: 0 0;
+}
+
+.add-sort {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sort-btn {
+    padding: 6px 20px;
 }
 
 button {
@@ -61,15 +70,41 @@ li {
     padding: 10px;
 }
 
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
 .due-date {
     color: red;
-    margin: 30px;
+    margin: 0 30px;
 }
+
+/* Add this style for completed tasks */
+.completed-task {
+    text-decoration: line-through;
+    color: #888;
+}
+
 
 .completion-tick {
     margin: 0 15px;
 }
 
-input[type="text"] {
-    margin-right: 10px;
+input[type="date"] {
+    background-color: #0080ff;
+    padding: 10px 15px;
+    font-family: "Roboto mono", monospace;
+    color: #fff;
+    font-size: 12px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+}
+
+::-webkit {
+    background-color: white;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 3px;
 }
